--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-   <div class="view-content" id="sufuria">
+   <div class="view-content" >
        
        
    </div>
