--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
    <div class="view-content" >
+       <h1 class="bandName" style="text-align: center; color: white; font-weight: 900; font-size: 40px;"></h1>
        
        
    </div>
