--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
    <div class="view-content container text-center mt-5" >
     <form>
-        <input type="text" id="search" placeholder="enter artistname" >
+        <input type="text" id="search" placeholder="try 'justin beiber'" >
         <button type="button" id="submitter">Get Events</button>
         
     </form>
